force-app/main/default/objects/IFv2_Workflows__mdt/IFv2_Workflows__mdt.object-meta.xml
<CustomObject>
    <description>For storing profile categorization parameters in InsightFlow application version 2.0</description>
    <label>Workflows</label>
    <pluralLabel>Workflows</pluralLabel>
</CustomObject>