force-app/main/default/objects/IFv2_Workflows__mdt/fields/DeactivateInInsightflow1__c.field-meta.xml
<CustomField>
    <fullName>DeactivateInInsightflow1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to deactivate the Workflow execution from Insightflow 1.0</description>
    <inlineHelpText>Check the checkbox to disable the execution of this Workflow from Insightflow 1.0</inlineHelpText>
    <label>Deactivate in Insightflow 1.0</label>
    <type>Checkbox</type>
</CustomField>