force-app/main/default/objects/IFv2_Workflows__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>This is lookup field to Division Metadata.</description>
    <inlineHelpText>Please select the appropriate division to which the Workflow is related to</inlineHelpText>
    <label>Division</label>
    <referenceTo>IFv2_Division__mdt</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>