force-app/main/default/objects/IFv2_Workflows__mdt/fields/EnteredValueisPublicGroup__c.field-meta.xml
<CustomField>
    <fullName>EnteredValueisPublicGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box is used to specify whether the value specified in users field is a public group or not. If yes this checkbox is checked else not.</description>
    <inlineHelpText>Check this checkbox if the entered value in Users field is public group.</inlineHelpText>
    <label>Entered Value is Public Group</label>
    <type>Checkbox</type>
</CustomField>