force-app/main/default/objects/IFv2_Workflows__mdt/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check if this is a General Workflow</inlineHelpText>
    <label>General</label>
    <type>Checkbox</type>
</CustomField>