force-app/main/default/objects/IFv2_Workflows__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Please enter the Workflow Name</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>