force-app/main/default/objects/IFv2_Workflows__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>APAC - Asia Pacific Associated Countries 
EMEA - Europe and Middle East 
NALA - North and Latin America
All - General</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NALA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>