force-app/main/default/objects/IFv2_Workflows__mdt/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <description>This is used to specify the request status.</description>
    <inlineHelpText>Specify the request status</inlineHelpText>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>