force-app/main/default/objects/IFv2_Workflows__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Active&apos;</defaultValue>
    <inlineHelpText>Active - To enable this Workflow
Inactive - To disable this Workflow</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Verify</fullName>
                <isActive>false</isActive>
                <label>Verify</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>