force-app/main/default/objects/IFv2_Workflows__mdt/fields/ThirdPartyFormat__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyFormat__c</fullName>
    <inlineHelpText>This is used to enter value from 3rd Party</inlineHelpText>
    <label>Third Party Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>