force-app/main/default/objects/IFv2_Workflows__mdt/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <inlineHelpText>Please enter the Public Group name to which the Workflow should be accessible</inlineHelpText>
    <label>Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>