force-app/main/default/objects/IFv2_Workflows__mdt/listViews/Custom.listView-meta.xml
<ListView>
    <fullName>Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>Division__c</columns>
    <columns>General__c</columns>
    <columns>Users__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>SCC</value>
    </filters>
    <label>Custom</label>
    <language>en_US</language>
</ListView>