force-app/main/default/objects/IFv2_Workflows__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>MasterLabel</columns>
    <columns>Name__c</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>Users__c</columns>
    <columns>EnteredValueisPublicGroup__c</columns>
    <columns>Region__c</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>